# 3d-display

./: CMakeLists.txt
include/: cv_actions.hpp  event_handlers.hpp  gtk_signal_data.hpp  shared.hpp
src/: cv_actions.cpp  event_handlers.cpp  main.cpp  shared.cpp
ui/: main.blp
